kubernetes/apps/media/plex/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: plex
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - plex.iacob.uk
  rules:
    - backendRefs:
        - name: plex
          port: 32400
