kubernetes/apps/media/plex/app/securitypolicy.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: plex-cors
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: plex
  cors:
    allowOrigins:
      - "https://*.iacob.uk"
      - "http://localhost:*"
    allowMethods:
      - GET
      - OPTIONS
    allowHeaders:
      - "*"
    exposeHeaders:
      - Content-Length
      - Content-Type
    maxAge: 86400s
